# docs/swagger.json
@@ -891,6 +891,11 @@
         },
         "/oauth/authorize": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Request authorization code with PKCE support",
                 "consumes": [
                     "application/json"
@@ -1131,15 +1136,15 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Entity type",
-                        "name": "entity_type",
+                        "description": "Resource type",
+                        "name": "resource_type",
                         "in": "query",
                         "required": true
                     },
                     {
                         "type": "string",
-                        "description": "Entity ID",
-                        "name": "entity_id",
+                        "description": "Resource ID",
+                        "name": "resource_id",
                         "in": "query",
                         "required": true
                     },
@@ -2773,25 +2778,25 @@
             "type": "object",
             "required": [
                 "content",
-                "entity_id",
-                "entity_type",
                 "rating",
+                "resource_id",
+                "resource_type",
                 "title"
             ],
             "properties": {
                 "content": {
                     "type": "string"
                 },
-                "entity_id": {
-                    "type": "string"
-                },
-                "entity_type": {
-                    "type": "string"
-                },
                 "rating": {
                     "type": "integer",
                     "maximum": 5,
                     "minimum": 1
+                },
+                "resource_id": {
+                    "type": "string"
+                },
+                "resource_type": {
+                    "type": "string"
                 },
                 "title": {
                     "type": "string"
@@ -2807,17 +2812,17 @@
                 "created_at": {
                     "type": "string"
                 },
-                "entity_id": {
-                    "type": "string"
-                },
-                "entity_type": {
-                    "type": "string"
-                },
                 "id": {
                     "type": "string"
                 },
                 "rating": {
                     "type": "integer"
+                },
+                "resource_id": {
+                    "type": "string"
+                },
+                "resource_type": {
+                    "type": "string"
                 },
                 "status": {
                     "type": "string"
